--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ body {
 	justify-content: space-around;
 	padding-top: 1px;
 	min-height: 100vh;
-	color: black;
 
 }
 
@@ -25,6 +24,7 @@ body {
 	/*	margin: 0px 500px 0px 100px;*/
 	max-width: 50ch;
 	font-size: 20px;
+	color: rgb(100, 100, 100);
 
 }
 
@@ -169,6 +169,16 @@ h3 {
 	background-image: radial-gradient(rgb(100, 100, 100), rgb(0, 0, 0));
 	padding-top: 1px;
 	/*	background-color: #1a1e22;*/
+}
+
+#projects-header {
+	text-align: center;
+	margin: 40px 0px 40px 0;
+}
+
+#projects-header > img {
+	width: 400px;
+
 }
 
 app-project {
